Prevent footer overlap

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -14,7 +14,8 @@ body {
 
   margin: 0;
   padding: $masthead-height 0 0;
-  padding-bottom: 9em;
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
   font-family: $global-font-family;
   line-height: 1.5;
 
